src/index.css
@import "tailwindcss";

@theme {
  --color-background: #f7f9ff;
  --color-surface-container-high: #e5e8ee;
  --color-surface-container-lowest: #ffffff;
  --color-surface-dim: #d7dadf;
  --color-inverse-surface: #2d3135;
  --color-on-primary-container: #ffffff;
  --color-outline: #727785;
  --color-outline-variant: #c1c6d6;
  --color-on-error: #ffffff;
  --color-on-secondary: #ffffff;
  --color-on-primary: #ffffff;
  --color-on-tertiary-fixed-variant: #8b191d;
  --color-surface-bright: #f7f9ff;
  --color-surface-container: #ebeef3;
  --color-primary: #005bbf;
  --color-inverse-on-surface: #eef1f6;
  --color-on-background: #181c20;
  --color-secondary-container: #80f98b;
  --color-on-secondary-fixed: #002106;
  --color-on-surface: #181c20;
  --color-surface-tint: #005bc0;
  --color-tertiary-container: #cd4a47;
  --color-secondary: #006e25;
  --color-error-container: #ffdad6;
  --color-on-primary-fixed-variant: #004493;
  --color-on-primary-fixed: #001a41;
  --color-on-secondary-fixed-variant: #00531a;
  --color-tertiary-fixed-dim: #ffb3ae;
  --color-secondary-fixed-dim: #66df75;
  --color-on-tertiary-fixed: #410004;
  --color-on-tertiary-container: #ffffff;
  --color-on-error-container: #93000a;
  --color-secondary-fixed: #83fc8e;
  --color-primary-fixed-dim: #adc7ff;
  --color-surface-container-highest: #e0e3e8;
  --color-inverse-primary: #adc7ff;
  --color-on-tertiary: #ffffff;
  --color-primary-fixed: #d8e2ff;
  --color-tertiary-fixed: #ffdad7;
  --color-on-surface-variant: #414754;
  --color-surface: #f7f9ff;
  --color-surface-variant: #e0e3e8;
  --color-on-secondary-container: #007327;
  --color-primary-container: #1a73e8;
  --color-error: #ba1a1a;
  --color-surface-container-low: #f1f4f9;
  --color-tertiary: #ab3231;

  --font-headline: "Lexend";
  --font-body: "Lexend";
  --font-label: "Lexend";
}

body {
    font-family: 'Lexend', sans-serif;
    background-color: var(--color-background);
    color: var(--color-on-background);
    overflow: hidden;
}

.material-symbols-outlined {
    font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 48;
}

.custom-shadow {
    box-shadow: 0 12px 32px -4px rgba(24, 28, 32, 0.06);
}

.action-gradient {
    background: linear-gradient(135deg, #005bbf 0%, #1a73e8 100%);
}

.active-nav-border {
    border-left: 4px solid #1A73E8;
}

.editorial-shadow {
    box-shadow: 0px 12px 32px rgba(24, 28, 32, 0.08);
}

/* Custom typography enforcement */
.h1-style { font-size: 32px; font-weight: 700; text-transform: uppercase; }
.h2-style { font-size: 24px; font-weight: 700; }
.h3-style { font-size: 20px; font-weight: 700; }
.action-style { font-size: 20px; font-weight: 700; }
.body-style { font-size: 18px; font-weight: 400; }
.body-medium-style { font-size: 18px; font-weight: 500; }
.small-style { font-size: 16px; font-weight: 400; color: #495057; }

